# rustservice-template

./: Cargo.toml  LICENSE  Makefile  README.md  env.json
src/: app_config.rs  common.rs  lib.rs  main.rs
src/service/: health_check.rs
