[package]
name = "rustservice_template"
version = "0.1.0"
authors = ["axxon-n <axxon-n-23@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24.1", features = ["sync", "rt-multi-thread", "macros"] }
anyhow = "1.0.69"
actix-web = "4"
actix-cors = "0.6.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
num_cpus = "1.13"
serde-querystring = "0.1.0"
color-eyre = "0.6"
envy = "0.4.2"
